# nova-explorer

./: README.md  latest.json  make-icon.mjs  package.json  release.ps1
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/commands/: fs.rs  git.rs  pty.rs
src/components/filepane/: FilePane.tsx
src/components/terminal/: TerminalPanel.tsx
src/components/toolbar/: Toolbar.tsx
src/hooks/: useKeyboard.ts
src/lib/: utils.ts
src/store/: index.ts
